# k8s-dashboard

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  Makefile  README.md  index.html  package-lock.json  package.json
.github/: README.md
backend/: README.md  go.mod  go.sum
deepagent-docs/: agent-harness.md  backend.md  customize.md  human-in-loop.md  lang-term-memory.md  middleware.md  quickstart.md  subagent.md
docs/: DOCKER_BUILD.md  alert-implementation-progress.md
frontend/: .env.development  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
python-agent/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt  start.sh
python-agent/src/: __init__.py  config.py  grpc_server.py  main.py
python-agent/src/agents/: __init__.py  deep.py  factory.py  master.py  models.py  react.py  team.py
python-agent/src/api/: app.py  websocket.py
python-agent/src/api/models/: __init__.py  messages.py
python-agent/src/api/routes/: config.py  health.py  providers.py  sessions.py
python-agent/src/k8s/: __init__.py  client.py
python-agent/src/middleware/: __init__.py  k8s.py
python-agent/src/proto/: __init__.py  agent.proto  agent_pb2.py  agent_pb2_grpc.py
python-agent/src/storage/: __init__.py  database.py  models.py
python-agent/src/storage/repositories/: __init__.py  provider.py  session.py
python-agent/src/tools/: __init__.py  action.py  diagnostic.py  query.py
python-agent/tests/: test_agents.py  test_tools.py
scripts/: add-pagination.py  docker-cleanup.sh  docker-test.sh
src/: App.jsx  index.css
(+233 files in other folders)
